# daytona-market-research

./: .dockerignore  .env.example  .gitignore  README.md  merged.json  pyproject.toml  report.md
docker-out/: social_snapshot.finding.json
examples/fixtures/: content_audit.finding.json  creative.finding.json  funnel.finding.json  keyword_research.finding.json  organic_social_youtube.finding.json  paid_search.finding.json  paid_social.finding.json  seo_assessment.finding.json  serp_analysis.finding.json  technical_seo.finding.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
frontend/src/: App.tsx  index.css
orchestrator/: __init__.py  __main__.py  cli.py  context.py  registry.py  remote_daytona.py  uploads.py
orchestrator/agents/: __init__.py  funnel.py  g2_review_sites.py  google_ads.py  google_maps.py  linkedin.py  meta_ads.py  organic_search.py  youtube.py
plans/: daytona_marketing_analysts_295d6422.plan.md
report_gen/: __init__.py  cli.py  daytona_imports.py  daytona_runner.py  daytona_snapshot.py  llm_polish.py  merge.py  models.py  render.py
report_gen/templates/: appendix.md.j2  channel_sections.md.j2  executive_summary.md.j2  metric_rollup.md.j2  report.md.j2  (+3 more)
scripts/: daytona_social_youtube_worker.sh
seo_agents/: assessment.py  common.py  competitor_analysis.py  content_audit.py  keyword_research.py  requirements.txt  serp_analysis.py  technical_seo.py
tests/: test_merge.py  test_mock_agents.py  test_orchestrator.py  test_render.py  test_social_worker.py  test_web.py
workers/: __init__.py
(+17 files in other folders)
